@@ -23,7 +23,7 @@
 			href="http://www.open-search-server.com" />
 		<space width="10px" />
 		<toolbarbutton label="Wiki documentation" target="_blank"
-			href="http://sourceforge.net/apps/mediawiki/opensearchserve" />
+			href="http://www.open-search-server.com/wiki/en" />
 	</caption>
 	<tabbox>
 		<tabs>
