@@ -9,8 +9,12 @@ http://sourceforge.net/tracker/?group_id=260863
 Open Search Server 1.1.3
 
 Bug fixes
+- 2989836: Statistics are not set up in template	
 - 2988425: Crawler is not obeying disallow directives from robots.txt
 - 2988433: Crawler ignores query part of URL when evaluating robots.txt
+
+Changes:
+- 2989831: Update the documentation link (wiki)
 
 Open Search Server 1.1.2
 
